font chenge ,overflow issue fix, button line issue fix

--- a/css/style.css
+++ b/css/style.css
@@ -12,6 +12,7 @@
 }
 body{
     background-color: var(--light-color);
+    font-family: "Average Sans", serif;
 }
 
 .custom-container{
@@ -34,11 +35,11 @@ body{
 .f-18{
     font-size: 18px;
 }
-.main-font-familly{
+.heading-font{
     font-family: 'Faculty Glyphic';
 }
 /* .body-font-familly{
-    font-family: 'Montserrat';
+    font-family: "Average Sans", serif;
 } */
 .border-r{
     border-radius:10px;
@@ -77,10 +78,10 @@ body{
     transform: translateY(100%);
 }
 .custom_button:hover::before {
-    transform: translateY(-50%);
+    transform: translateY(-40%);
 }
 .custom_button:hover::after {
-    transform: translateY(50%);
+    transform: translateY(40%);
 }
 .svg-container:hover path {
     fill: var(--main-color); 
@@ -318,7 +319,7 @@ align-items: center;
 .swiper-slide img {
 display: block;
 width: 100%;
-/* height: 100%; */
+/* height: 100%; */ 
 object-fit: cover;
 }
 .swiper-slide {
@@ -431,5 +432,3 @@ animation: slowZoom 3s linear infinite;
 .a-box{
     padding: 50px;
 }
-
-
